# cabal-monitor

./: CHANGELOG.md  README.md  build-monitor-hs.cabal  cabal-monitor.cabal  cabal.project  flake.nix  hie.yaml
.github/workflows/: ci.yaml
app/: Main.hs
bench/: Main.hs  TH.hs  baseline_9.10.2.csv  baseline_9.12.2.csv  baseline_ubuntu-latest_9.10.1_ci.csv  baseline_ubuntu-latest_9.10.2_ci.csv  baseline_ubuntu-latest_9.12.1_ci.csv  baseline_ubuntu-latest_9.12.2_ci.csv  sample.txt
scripts/: bench.sh
src/: Monitor.hs
src/Cabal/: Monitor.hs
src/Cabal/Monitor/: Args.hs  BuildState.hs  BuildStatus.hs  Config.hs  Logger.hs  Notify.hs  Pretty.hs  Process.hs  Status.hs
src/Cabal/Monitor/Args/: TH.hs
src/Cabal/Monitor/Config/: Args.hs  Data.hs  Toml.hs
src/Cabal/Monitor/Config/Args/: TH.hs
src/Monitor/: Args.hs  Logger.hs  Status.hs
test/functional/: Main.hs  build.sh  example_large_building_1.txt  example_large_building_2.txt  example_large_building_3.txt  example_large_start.txt  example_short.txt  header_1.txt  header_local.txt  local.txt
test/functional/goldens/: testFormatInl.golden  testFormatInlTrunc_windows.golden  testFormatLargeBuilding1.golden  testFormatLargeBuilding1_posix.golden  testFormatLargeBuilding2.golden  testFormatLargeBuilding2_windows.golden  testFormatLargeBuilding3.golden  testFormatLargeBuilding3Window_windows.golden  testFormatLargeBuilding3_windows.golden  testFormatLargeStart.golden  testFormatLargeStart_windows.golden  testFormatLocal_posix.golden  testFormatNlTrunc.golden  testFormatNl_windows.golden  testFormatShortWindow_posix.golden  testFormatShortWindow_windows.golden  testMonitor.golden  testMonitorShortWindow.golden  testPidExit_posix.golden  testPidExit_windows.golden
test/unit/: Main.hs  config.toml
