cabal-version:      2.4
name:               build-monitor-hs
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.10.1 || ==9.12.1
copyright:          2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/build-monitor-hs/
bug-reports:        https://github.com/tbidne/build-monitor-hs/issues
synopsis:           Template
description:        A Template
category:           Template
extra-source-files:
  .gitignore
  bench/sample.txt
  cabal.project
  README.md
  test/functional/build.sh

extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/build-monitor-hs

common common-lang
  default-extensions:
    ApplicativeDo
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    LexicalNegation
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    RequiredTypeArguments
    TypeAbstractions
    TypeFamilies

  default-language:   GHC2024

library
  import:          common-lang
  other-modules:   Paths_build_monitor_hs
  autogen-modules: Paths_build_monitor_hs
  exposed-modules:
    Monitor
    Monitor.Args
    Monitor.Logger

  build-depends:
    , base                  >=4.14.0.0 && <4.22
    , bytestring            >=0.10.12  && <0.13
    , concurrent-output     ^>=1.10.7
    , containers            >=0.6.3.1  && <0.8
    , deepseq               >=1.4.6.0  && <1.6
    , effectful             ^>=2.5.0.0
    , effectful-utils       ^>=0.1
    , fs-effectful          ^>=0.1
    , fs-utils              ^>=0.1
    , optparse-applicative  >=0.15     && <0.19
    , optparse-effectful    ^>=0.1
    , text                  >=1.2.3.2  && <2.2

  hs-source-dirs:  src

executable build-monitor-hs
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , build-monitor-hs
    , concurrent-output
    , effectful
    , fs-effectful
    , optparse-effectful

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , build-monitor-hs
    , containers
    , effectful
    , env-guard           ^>=0.2
    , fs-effectful
    , fs-utils
    , optparse-effectful
    , tasty               >=1.1.0.3 && <1.6
    , tasty-hunit         >=0.9     && <0.11
    , text

  hs-source-dirs: test/functional

benchmark benchmarks
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  TH
  build-depends:
    , base
    , build-monitor-hs
    , bytestring
    , effectful
    , fs-effectful
    , fs-utils
    , tasty-bench       >=0.3  && <0.5
    , template-haskell  >=2.21 && <2.24

  hs-source-dirs: bench
