cabal-version:      2.4
name:               cabal-monitor
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.10.1 || ==9.12.1
copyright:          2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/cabal-monitor/
bug-reports:        https://github.com/tbidne/cabal-monitor/issues
synopsis:           Template
description:        A Template
category:           Template
extra-source-files:
  .gitignore
  bench/sample.txt
  cabal.project
  README.md
  test/functional/build.sh

extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/cabal-monitor

common common-lang
  default-extensions:
    ApplicativeDo
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    LexicalNegation
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    RequiredTypeArguments
    StrictData
    TypeAbstractions
    TypeFamilies

  default-language:   GHC2024

library
  import:          common-lang
  other-modules:   Paths_cabal_monitor
  autogen-modules: Paths_cabal_monitor
  exposed-modules:
    Cabal.Monitor
    Cabal.Monitor.Args
    Cabal.Monitor.Logger
    Cabal.Monitor.Status

  build-depends:
    , base                  >=4.14.0.0 && <4.22
    , bytestring            >=0.10.12  && <0.13
    , concurrent-output     ^>=1.10.7
    , containers            >=0.6.3.1  && <0.8
    , deepseq               >=1.4.6.0  && <1.6
    , effectful             ^>=2.5.0.0
    , effectful-utils       ^>=0.1
    , fs-effectful          ^>=0.1
    , fs-utils              ^>=0.1
    , optparse-applicative  >=0.15     && <0.19
    , optparse-effectful    ^>=0.1
    , relative-time         ^>=0.1
    , terminal-effectful    ^>=0.1
    , text                  >=1.2.3.2  && <2.2

  hs-source-dirs:  src

executable cabal-monitor
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , cabal-monitor
    , concurrent-output
    , effectful
    , fs-effectful
    , optparse-effectful
    , terminal-effectful

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , cabal-monitor
    , containers
    , effectful
    , effectful-utils
    , env-guard           ^>=0.2
    , fs-effectful
    , fs-utils
    , optparse-effectful
    , tasty               >=1.1.0.3 && <1.6
    , tasty-hunit         >=0.9     && <0.11
    , terminal-effectful
    , text

  hs-source-dirs: test/functional

benchmark benchmarks
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  TH
  build-depends:
    , base
    , bytestring
    , cabal-monitor
    , effectful
    , fs-effectful
    , fs-utils
    , tasty-bench         >=0.3  && <0.5
    , template-haskell    >=2.21 && <2.24
    , terminal-effectful

  hs-source-dirs: bench
